# fem-tddft

./: .gitignore  CMakeLists.txt  README.md  parameters.prm
doc/: Doxyfile
examples/: CMakeLists.txt  qwell.cc
include/: atomic_units.hpp  dft.hpp  double_output_stream.hpp  external_potentials.hpp  general.hpp  ground_state.hpp  hartree.hpp  kohn_sham.hpp  model.hpp  output_results.hpp  output_results_2.hpp  parameters_parsing.hpp  stationary_schrodinger.hpp  time_dependent.hpp  utilities.hpp  xc.hpp
include/models/: base_model.hpp  quantum_well.hpp
include/qwell/: hartree.hpp  quantum_well.hpp
lib/include/: atomic_units.hpp  base_model.hpp  dft.hpp  double_output_stream.hpp  hartree.hpp  kohn_sham.hpp  output_results.hpp  stationary_schrodinger.hpp  time_dependent.hpp  utilities.hpp  xc.hpp
lib/include/models/: quantum_well.hpp
lib/src/: base_model.cc  dft-test.cc  dft.cc  dft.original.cc  hartree.cc  kohn_sham.cc  parameters_parsing.cc  time_dependent.cc  utilities.cc  xc.cc
lib/src/models/: base_model.cc  quantum_well.cc
src/: dft.cc  external_potentials.cc  general.cpp  ground_state.cpp  hartree.cc  hartree.cpp  kohn_sham.cc  main.cc  main.cpp  model.cc  model.cpp  output_results.cc  parameters_parsing.cc  qwell.cc  stationary_schrodinger.cc  stationary_schrodinger.cpp  test.cc  test.cpp  time_dependent.cc  time_dependent.cpp  utilities.cc  xc.cc
src/models/: quantum_well.cc
src/qwell/: main.cc  qwell.prm  qwell_model.cc
